--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
-REACT_APP_BACKEND_URL=https://chatapp-fjma.onrender.com
+# Primary API URL (Render)
+REACT_APP_API_URL=https://chatapp-azte.onrender.com
+
+# Also expose via BACKEND_URL for compatibility
+REACT_APP_BACKEND_URL=https://chatapp-azte.onrender.com
