--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY ChatBackend.csproj ./
+COPY backend/ChatBackend.csproj ./
 RUN dotnet restore
 
 # Copy everything else and publish
