--- a/backend/appsettings.example.json
+++ b/backend/appsettings.example.json
@@ -7,5 +7,9 @@
   },
   "AllowedHosts": "*",
   "AI_SERVICE_URL": "https://your-username-ai-service.hf.space",
-  "HF_TOKEN": "your_huggingface_token_here"
+  "HF_TOKEN": "your_huggingface_token_here",
+  "ConnectionStrings": {
+    "Default": "Data Source=chat.db"
+  },
+  "FRONTEND_ORIGIN": "https://chatapp-seven-flax.vercel.app"
 }
