update: AI_SERVICE_URL example -> https://gulcan99-ai-service.hf.space

--- a/backend/appsettings.example.json
+++ b/backend/appsettings.example.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AI_SERVICE_URL": "https://your-username-ai-service.hf.space",
+  "AI_SERVICE_URL": "https://gulcan99-ai-service.hf.space",
   "HF_TOKEN": "your_huggingface_token_here",
   "ConnectionStrings": {
     "Default": "Data Source=chat.db"
