update: FRONTEND_ORIGIN example -> https://chatapp-gulcans-projects-f56e0763.vercel.app

--- a/backend/appsettings.example.json
+++ b/backend/appsettings.example.json
@@ -11,5 +11,5 @@
   "ConnectionStrings": {
     "Default": "Data Source=chat.db"
   },
-  "FRONTEND_ORIGIN": "https://chatapp-seven-flax.vercel.app"
+  "FRONTEND_ORIGIN": "https://chatapp-gulcans-projects-f56e0763.vercel.app"
 }
